--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "dbpedia-sparql-client",
-  "version": "0.8.1",
+  "version": "0.8.2",
   "description": "A simple DBpedia SPARQL client",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "compile": "./node_modules/.bin/babel lib/index.js --out-file index.js ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -20,5 +21,8 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
     "request-promise": "^2.0.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.0.0"
   }
 }
