--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
-    "request-promise": "^2.0.1"
+    "node-fetch": "^1.5.1"
   },
   "devDependencies": {
     "babel-cli": "^6.0.0"
