--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dbpedia-sparql-client",
-  "version": "0.9.2",
+  "version": "0.9.3",
   "description": "A simple DBpedia SPARQL client",
   "main": "index.js",
   "scripts": {
@@ -23,12 +23,12 @@
   "author": "Carmine DiMascio <cdimascio@gmail.com> (https://github.com/cdimascio)",
   "license": "MIT",
   "dependencies": {
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.7.2",
     "node-fetch": "^1.5.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.0.0"
+    "babel-cli": "^6.0.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.7.2"
   }
 }
